deployment/simple-deployment-v3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api
  labels:
    app: simple-api

spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      containers:
      - name: simple-api
        image: gustavoleitao/simple-api:1.0.4
        imagePullPolicy: Always
        resources:
          requests:
            memory: "32Gi"
            cpu: "250m"
          limits:
            memory: "64Gi"
              cpu: "500m"
        ports:
        - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 10
