deployment/simple-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: simple-api
    labels:
        app: simple-api

spec:
    replicas: 2
    selector:
        matchLabels:
            app: simple-api
    template:
        metadata:
            labels:
                app: simple-api
        spec:
            containers:
            -   name: simple-api
                image: gustavoleitao/simple-api:1.0.0
                ports:
                -   containerPort: 3000
                readinessProbe:
                    httpGet:
                        path: /
                        port: 3000
