deployment/simple-service.yml
apiVersion: v1
kind: Service
metadata:
    name: simple-api
    labels:
        app: simple-api

spec:
    type: ClusterIP
    ports:
    - port: 3000
      targetPort: 3000
      # nodePort: 30007
    selector:
      app: simple-api
