deployment/simple-ingress.yml
apiVersion: networking.k8s.io/v1alpha1
kind: Ingress
metadata:
    name: simple-api-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"

spec:
    rules:
    -   host: simpleapi.com.br
        http:
            paths:
                -   path: /
                    backend:
                        serviceName: simple-api
                        servicePort: 3000
